[gd_scene load_steps=2 format=3 uid="uid://bvge68v4747tt"]

[ext_resource type="Script" uid="uid://cm1ivrn487i5g" path="res://ui/chat_box.gd" id="1_u1hdl"]

[node name="ChatBox" type="Control"]
custom_minimum_size = Vector2(450, 250)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_u1hdl")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Panel" type="PanelContainer" parent="Margin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Margin/Panel"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Margin/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="TextInput" type="LineEdit" parent="Margin/Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Message"
max_length = 64

[connection signal="text_submitted" from="Margin/Panel/VBox/TextInput" to="." method="_on_text_input_text_submitted"]
